# bvh-rssm

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
bvh_rssm/causal/: __init__.py  attribution.py  router.py
bvh_rssm/envs/: __init__.py  regime_maze.py  sensor_drift.py  shift_maze.py  shift_pendulum.py  shift_walker.py  trading_regime.py  wrappers.py
bvh_rssm/networks/: __init__.py  actor_critic.py  common.py  decoder.py  encoder.py  heads.py  rssm.py
bvh_rssm/serving/: __init__.py  predictor.py  schemas.py  server.py
bvh_rssm/training/: __init__.py  collector.py  experiment.py  losses.py  metrics.py  replay_buffer.py  trainer.py
bvh_rssm/utils/: __init__.py  distributions.py  math.py  rng.py
configs/experiment/: full_run.yaml  smoke_train.yaml
configs/model/: default.yaml  fast_mode.yaml
configs/training/: phase1.yaml  phase2.yaml  phase3.yaml
docs/plans/: 2026-04-14-phase3-bvh-gated-policy.md
docs/results/: README.md  sensordrift_report.json  sensordrift_v2_report.json  v2_validation.json  v3_validation.json
docs/specs/: 2026-04-14-phase3-bvh-gated-policy.md
scripts/: evaluate.py  experiment_phase3.py  experiment_sensordrift.py  experiment_shiftwalker.py  serve.py  train.py  validate.py
tests/integration/: test_environments.py  test_serving.py  test_training_smoke.py
tests/unit/: test_baselines.py  test_bvh_heads.py  test_causal.py  test_collector.py  test_common.py  test_distributions.py  test_encoder_decoder.py  test_experiment.py  test_heads.py  (+10 more)
(+5 files in other folders)
