[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bvh-rssm"
version = "0.1.0"
description = "Belief Validity Horizon RSSM — world model for non-stationary RL"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "gymnasium>=0.29",
    "numpy>=1.26",
]

[project.optional-dependencies]
training = [
    "wandb>=0.16",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "pycox>=0.2.3",
    "mujoco>=3.0",
    "minigrid>=2.3",
    "scipy>=1.12",
    "statsmodels>=0.14",
]
serving = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bvh_rssm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.pyright]
pythonVersion = "3.11"
strict = true
